<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spell Quest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="greeting">"Ahoy Mateys!! Ready for a spell quest ?"</string>
    <string name="activity_question">What would you like to do today?</string>
    <string name="spell_quiz_radio_btn">Spelling Quiz</string>
    <string name="vocab_quiz_radio_btn">Vocabulary Quiz</string>
    <string name="learn_radio_btn">Learn Words</string>
    <string name="add_words_radio_btn">Add New Words</string>
    <string name="find_words_radio_btn">Find New Words</string>
    <string name="view_treasure_radio_btn">View Your Treasure</string>
    <string name="title_activity_treasure">TreasureActivity</string>
    <string name="title_activity_spell_quiz">SpellQuizActivity</string>
    <string name="title_activity_vocab_quiz">VocabQuizActivity</string>
    <string name="title_activity_learn_words">LearnWordsActivity</string>
    <string name="title_activity_add_words">AddWordsActivity</string>
    <string name="title_activity_find_words">FindWordsActivity</string>
    <string name="abt_spell_quiz">Spell Quiz</string>
    <string name="abt_help">Help</string>
    <string name="title_activity_word_list_detail">WordListDetailActivity</string>

</resources>
